controlling audio volume with slider

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="volume__control">
         <i class="fa fa-volume-up fa-2x" aria-hidden="true"></i>
-        <input type="range" name="" id="volume__slider" />
+        <input type="range" name="" id="volume__slider" min="0" max="100" />
       </div>
       <div class="util__buttons">
         <button id="util__button-auto">Start Auto Music</button>
