--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="title">Drum Kits</h1>
+      <h1 class="title">Drum Kit</h1>
       <div class="drum_set">
         <button class="drum w">w</button>
         <button class="drum a">a</button>
